🛠️ Update: CSS property `justify-content` of news list is now `space-around` instead of `space-between` [#73]

--- a/assets/stylesheets/news/news_list.scss
+++ b/assets/stylesheets/news/news_list.scss
@@ -132,7 +132,7 @@ $arrow-width: 94px;
 		margin: 0 auto;
 		height: 271px;
 		max-width: 340px;
-		justify-content: space-between;
+		justify-content: space-around;
 	}
 
 	.show-all {
