--- a/assets/stylesheets/variables/_mixin.scss
+++ b/assets/stylesheets/variables/_mixin.scss
@@ -14,6 +14,12 @@ $breakpoint: 742px;
 	}
 }
 
+@mixin ultimate-narrow {
+	@media screen and (max-width: 319px) {
+		@content;
+	}
+}
+
 @mixin low-height {
 	@media screen and (max-height: 566px) {
 		@content;
