--- a/assets/stylesheets/news/news_list.scss
+++ b/assets/stylesheets/news/news_list.scss
@@ -216,3 +216,17 @@ $list-width: 288px;
 		margin-top: 68px;
 	}
 }
+
+@include ultimate-narrow {
+	.arrows {
+		top: 604px;
+	}
+
+	.articles {
+		height: auto;
+	}
+
+	.article {
+		margin: 0 auto;
+	}
+}
