🛠️ Update: use backpoint of `wide-width` mixin for `mini-news-list` mixin, and rename the mixin to `not-wide-width` [#73]

--- a/assets/stylesheets/news/article_card.scss
+++ b/assets/stylesheets/news/article_card.scss
@@ -73,7 +73,7 @@ time {
 	}
 }
 
-@include mini-news-list {
+@include not-wide-width {
 	article:not(.force-pc-v-on-semi-narrow) {
 		@include pc {
 			@include mini;
