--- a/assets/stylesheets/variables/_mixin.scss
+++ b/assets/stylesheets/variables/_mixin.scss
@@ -1,6 +1,7 @@
 // © 2022 REVATI
 
 $breakpoint: 742px;
+$bp-wide: 894px;
 
 @mixin pc {
 	@media screen and (min-width: $breakpoint) {
@@ -27,13 +28,13 @@ $breakpoint: 742px;
 }
 
 @mixin wide-width {
-	@media screen and (min-width: 894px) {
+	@media screen and (min-width: $bp-wide) {
 		@content;
 	}
 }
 
-@mixin mini-news-list {
-	@media screen and (max-width: 888px) {
+@mixin not-wide-width {
+	@media screen and (max-width: #{$bp-wide - 1}) {
 		@content;
 	}
 }
