--- a/assets/stylesheets/news/news_list.scss
+++ b/assets/stylesheets/news/news_list.scss
@@ -127,7 +127,7 @@ $arrow-width: 94px;
 
 $list-width: 288px;
 
-@include mini-news-list {
+@include not-wide-width {
 	@include pc {
 		.article {
 			margin: 0;
