--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -4,9 +4,33 @@
 @use './variables/dimension' as *;
 @use './variables/mixin' as *;
 
+main::before {
+	content: '';
+    $dark: rgba($secondary-color, 0.75);
+    background:
+        linear-gradient($dark, $dark),
+        linear-gradient(
+            165deg,
+            #4e8091 13%,
+            #154c84 22%,
+            #0f5372 44%,
+            #326e86 50%,
+            #132f6b 62%,
+            #132f6b 73%,
+            #050946 90%
+        );
+	background-size: 100% 100vh;
+	display: block;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	z-index: -1;
+}
+
 .container {
 	width: 100%;
-	background-color: $secondary-color;
 }
 
 .container::before {
