--- a/assets/stylesheets/member_lists.scss
+++ b/assets/stylesheets/member_lists.scss
@@ -1,105 +1,137 @@
 // © 2022 REVATI
 
-@use '/assets/stylesheets/variables/color' as *;
-
-.div-list,
-#team-list {
+ul {
 	list-style: none;
-	padding-left: 0;
+	padding: 0;
 }
 
-.div-list {
-	display: inline-block;
+.divisions {
 	margin: 0 auto;
-	padding: 8px 30px;
-	$border: 3px solid #ffffff4a;
-	border-top: $border;
-	border-bottom: $border;
+	margin-bottom: 24px;
+}
 
-	li {
-		margin: 4px auto;
+.division {
+	display: inline-block;
+	margin: 6px 4px;
+}
 
-		a {
-			font-family: 'Poppins', sans-serif;
-			font-size: 22px;
-			font-weight: 100;
-			text-decoration: none;
-			letter-spacing: 1px;
-		}
+button {
+	font-family: inherit;
+	color: inherit;
+	background: none;
+	border: solid 1px white;
+	border-radius: 18px;
+	cursor: pointer;
+	font-size: 18px;
+	padding: 3px 11px;
+	letter-spacing: -0.3px;
+
+	&.active {
+		background-color: white;
+		color: black;
 	}
 }
 
-#team-list {
-	h2 {
-		text-align: left;
-		font-size: 28px;
-		border-bottom: 2px solid white;
-		width: 94%;
-	}
+// @use '/assets/stylesheets/variables/color' as *;
 
-	p {
-		margin: 48px auto;
-	}
+// .div-list,
+// #team-list {
+// 	list-style: none;
+// 	padding-left: 0;
+// }
 
-	ul {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: center;
-		padding: 0;
-		margin: 0 auto;
+// .div-list {
+// 	display: inline-block;
+// 	margin: 0 auto;
+// 	padding: 8px 30px;
+// 	$border: 3px solid #ffffff4a;
+// 	border-top: $border;
+// 	border-bottom: $border;
 
-		li {
-			align-items: center;
-			margin: 8px 6px;
-			width: 138px;
-			height: 224px;
-			background-color: #e6e6e6;
-			list-style: none;
-			border-radius: 4px;
-			border: 4px solid #c0c0c0;
-			color: $primary-color-darker-2;
-			font-weight: 900;
+// 	li {
+// 		margin: 4px auto;
 
-			div {
-				> img {
-					width: 86px;
-					height: 86px;
-					border-radius: 50%;
-					margin: 20px auto;
-					border: 4px solid #c0c0c0;
-					pointer-events: none;
-					user-select: none;
-				}
+// 		a {
+// 			font-family: 'Poppins', sans-serif;
+// 			font-size: 22px;
+// 			font-weight: 100;
+// 			text-decoration: none;
+// 			letter-spacing: 1px;
+// 		}
+// 	}
+// }
 
-				h3 {
-					font-size: 18px;
-					margin-top: -16px;
-					margin-bottom: 9px;
-				}
+// #team-list {
+// 	h2 {
+// 		text-align: left;
+// 		font-size: 28px;
+// 		border-bottom: 2px solid white;
+// 		width: 94%;
+// 	}
 
-				.member-twitter img {
-					height: 26px;
-					transform: translateY(2px);
-				}
+// 	p {
+// 		margin: 48px auto;
+// 	}
 
-				.member-youtube img {
-					height: 24px;
-				}
+// 	ul {
+// 		display: flex;
+// 		flex-wrap: wrap;
+// 		justify-content: center;
+// 		padding: 0;
+// 		margin: 0 auto;
 
-				.member-twitch img {
-					height: 30px;
-					transform: translateY(4px);
-				}
+// 		li {
+// 			align-items: center;
+// 			margin: 8px 6px;
+// 			width: 138px;
+// 			height: 224px;
+// 			background-color: #e6e6e6;
+// 			list-style: none;
+// 			border-radius: 4px;
+// 			border: 4px solid #c0c0c0;
+// 			color: $primary-color-darker-2;
+// 			font-weight: 900;
 
-				a {
-					text-decoration: none;
-					margin: 0 4px;
+// 			div {
+// 				> img {
+// 					width: 86px;
+// 					height: 86px;
+// 					border-radius: 50%;
+// 					margin: 20px auto;
+// 					border: 4px solid #c0c0c0;
+// 					pointer-events: none;
+// 					user-select: none;
+// 				}
 
-					img {
-						user-select: none;
-					}
-				}
-			}
-		}
-	}
-}
+// 				h3 {
+// 					font-size: 18px;
+// 					margin-top: -16px;
+// 					margin-bottom: 9px;
+// 				}
+
+// 				.member-twitter img {
+// 					height: 26px;
+// 					transform: translateY(2px);
+// 				}
+
+// 				.member-youtube img {
+// 					height: 24px;
+// 				}
+
+// 				.member-twitch img {
+// 					height: 30px;
+// 					transform: translateY(4px);
+// 				}
+
+// 				a {
+// 					text-decoration: none;
+// 					margin: 0 4px;
+
+// 					img {
+// 						user-select: none;
+// 					}
+// 				}
+// 			}
+// 		}
+// 	}
+// }
