✨ Add: Sass variable `$primary-color-pale-lighter` [#80]

--- a/assets/stylesheets/variables/_color.scss
+++ b/assets/stylesheets/variables/_color.scss
@@ -5,4 +5,5 @@ $primary-color-darker: #0d2e51;
 $primary-color-darker-2: #021222;
 $primary-color-pale: #98c0e7;
 $primary-color-pale-darker: #375d81;
+$primary-color-pale-lighter: #dff1ff;
 $secondary-color: #111111;
