--- a/assets/stylesheets/member_lists.scss
+++ b/assets/stylesheets/member_lists.scss
@@ -29,11 +29,96 @@ button {
 	font-weight: 900;
 	padding: 4px 12px;
 	letter-spacing: -0.4px;
+}
 
-	&.active {
-		background-color: $primary-color-pale-lighter;
-		color: $primary-color-darker-2;
+.active {
+	background-color: $primary-color-pale-lighter;
+	color: $primary-color-darker-2;
+}
+
+.members {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+$icn-size: 88px;
+
+.member {
+	display: inline-grid;
+	grid-template-rows: auto;
+	grid-template-columns: $icn-size auto;
+	padding: 4px 12px;
+	margin: 6px;
+	text-align: left;
+	background-color: $primary-color;
+	border-radius: 5px;
+	box-shadow: 0 0 10px 0 #0000005a;
+	$border-light: solid 1px #ffffff30;
+	border-top: $border-light;
+	border-left: $border-light;
+	$border-shade: solid 1px #00000050;
+	border-bottom: $border-shade;
+	border-right: $border-shade;
+
+	::selection {
+		background: white;
+		color: $primary-color-darker;
 	}
+}
+
+.icon {
+	grid-row: 1 / 2;
+	grid-column: 1 / 2;
+	width: $icn-size;
+	height: $icn-size;
+	pointer-events: none;
+	user-select: none;
+	position: relative;
+	top: 50%;
+	transform: translateY(-45%);
+	box-sizing: border-box;
+	border-radius: 1px;
+	$border-shade: solid 2px #00000060;
+	border-top: $border-shade;
+	border-left: $border-shade;
+	$border-light: solid 2px #ffffff30;
+	border-bottom: $border-light;
+	border-right: $border-light;
+}
+
+.info {
+	grid-row: 1 / 2;
+	grid-column: 2 / 3;
+	margin-left: 5px;
+}
+
+.role, table {
+	opacity: 0.85;
+}
+
+.role {
+	font-size: 14px;
+}
+
+h2 {
+	font-size: 20px;
+	margin: 0;
+	color: white;
+	font-weight: 900;
+	line-height: 1.3;
+	margin-left: 1px;
+}
+
+table {
+	font-size: 16px;
+	line-height: 1;
+}
+
+.socials {
+	grid-row: 2 / 3;
+	grid-column: 1 / 3;
+	height: 46px;
 }
 
 @include sp {
