--- a/assets/stylesheets/member_lists.scss
+++ b/assets/stylesheets/member_lists.scss
@@ -99,16 +99,22 @@ table {
 }
 
 .role {
-	font-size: 14px;
+	font-size: 13px;
+	margin-bottom: -4px;
+}
+
+.no-role {
+	user-select: none;
 }
 
 h2 {
 	font-size: 20px;
 	margin: 0;
+	margin-top: -1px;
+	margin-left: 1px;
 	color: white;
 	font-weight: 900;
 	line-height: 1.3;
-	margin-left: 1px;
 }
 
 table {
