--- a/assets/stylesheets/member_lists.scss
+++ b/assets/stylesheets/member_lists.scss
@@ -48,6 +48,7 @@ $icn-size: 88px;
 	display: inline-grid;
 	grid-template-rows: auto;
 	grid-template-columns: $icn-size auto;
+	width: 246px;
 	padding: 4px 12px;
 	margin: 6px;
 	text-align: left;
@@ -60,6 +61,7 @@ $icn-size: 88px;
 	$border-shade: solid 1px #00000050;
 	border-bottom: $border-shade;
 	border-right: $border-shade;
+	overflow: scroll;
 
 	::selection {
 		background: white;
@@ -91,10 +93,11 @@ $icn-size: 88px;
 	grid-row: 1 / 2;
 	grid-column: 2 / 3;
 	margin-left: 5px;
+	white-space: nowrap;
 }
 
 .role,
-table {
+.details {
 	opacity: 0.85;
 }
 
@@ -117,7 +120,7 @@ h2 {
 	line-height: 1.3;
 }
 
-table {
+.details {
 	font-size: 16px;
 	line-height: 1;
 }
