--- a/assets/stylesheets/member_lists.scss
+++ b/assets/stylesheets/member_lists.scss
@@ -61,7 +61,7 @@ $icn-size: 88px;
 	$border-shade: solid 1px #00000050;
 	border-bottom: $border-shade;
 	border-right: $border-shade;
-	overflow: scroll;
+	overflow: hidden;
 
 	::selection {
 		background: white;
