--- a/assets/stylesheets/member_lists.scss
+++ b/assets/stylesheets/member_lists.scss
@@ -128,7 +128,23 @@ h2 {
 .socials {
 	grid-row: 2 / 3;
 	grid-column: 1 / 3;
-	height: 46px;
+	display: flex;
+	height: 54px;
+
+	img {
+		width: 23px;
+		height: auto;
+		vertical-align: middle;
+		margin: 17px 7px 10px 5px;
+		user-select: none;
+	}
+
+	.wide-icn {
+		height: 20px;
+		width: auto;
+		position: relative;
+		top: 1px;
+	}
 }
 
 @include sp {
