--- a/assets/stylesheets/news/article_body.scss
+++ b/assets/stylesheets/news/article_body.scss
@@ -122,8 +122,7 @@
 	}
 
 	strong {
-		font-family: 'Zen Kaku Gothic Antique Bold';
-		font-weight: bold;
+		font-weight: 900;
 		color: white;
 	}
 
@@ -142,8 +141,7 @@
 	details summary {
 		cursor: pointer;
 		text-decoration: underline;
-		font-family: 'Zen Kaku Gothic Antique Bold';
-		font-weight: bold;
+		font-weight: 900;
 		color: white;
 	}
 
