🚚 Move: styles in `global.css` into `styles.scss` [#109]

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -1,6 +1,39 @@
 // © 2022 REVATI
 
+@use './variables/color' as *;
 @use './variables/mixin' as *;
+
+* {
+	scrollbar-color: $primary-color-darker transparent;
+	scroll-margin-top: 104px;
+}
+
+::selection {
+	background: $primary-color;
+	color: white;
+}
+
+html {
+	scroll-behavior: smooth;
+	font-family: 'Zen Kaku Gothic New', sans-serif;
+	font-weight: 400;
+	background: $secondary-color;
+}
+
+body {
+	color: #eeeeee;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	margin: 0;
+	overflow-x: hidden;
+	// Anti Dark reader
+	background: none;
+
+	&.prevent-scroll {
+		overflow: hidden;
+	}
+}
 
 main > div.container {
 	width: 100%;
@@ -41,5 +74,19 @@ main > div.container {
 				}
 			}
 		}
+	}
+}
+
+a {
+	color: #17d8d8;
+	text-decoration: underline;
+	transition: 0.2s;
+
+	&:hover {
+		color: #7effb4;
+	}
+
+	&:active {
+		color: #e6ff9a;
 	}
 }
