--- a/src/lib/stylesheets/news/news_list.scss
+++ b/src/lib/stylesheets/news/news_list.scss
@@ -1,6 +1,6 @@
 // © 2022 REVATI
 
-@use '/assets/stylesheets/variables/mixin' as *;
+@use '$lib/stylesheets/variables/mixin' as *;
 
 .arrows {
 	position: relative;
