--- a/src/lib/stylesheets/teams.scss
+++ b/src/lib/stylesheets/teams.scss
@@ -1,7 +1,7 @@
 // © 2022 REVATI
 
-@use '/assets/stylesheets/variables/color' as *;
-@use '/assets/stylesheets/variables/mixin' as *;
+@use '$lib/stylesheets/variables/color' as *;
+@use '$lib/stylesheets/variables/mixin' as *;
 
 ul {
 	list-style: none;
