🎨 Change: do not use relative path to import Sass variables

--- a/src/lib/stylesheets/layout.scss
+++ b/src/lib/stylesheets/layout.scss
@@ -1,7 +1,7 @@
 // © 2022 REVATI
 
-@use './variables/color' as *;
-@use './variables/dimension' as *;
+@use '$lib/stylesheets/variables/color' as *;
+@use '$lib/stylesheets/variables/dimension' as *;
 
 main::before {
 	content: '';
