--- a/src/lib/stylesheets/style.scss
+++ b/src/lib/stylesheets/style.scss
@@ -82,6 +82,43 @@ a {
 	text-decoration: underline;
 	transition: 0.2s;
 
+	&[target='_blank'],
+	&.blank {
+		&:not(.no-after-icn) {
+			@mixin box-arrow-up-right-svg($color) {
+				/*
+					Bootstrap Icons - Box arrow up-right
+					https://icons.getbootstrap.com/icons/box-arrow-up-right/
+					Copyright (c) 2019 The Bootstrap Authors
+					under the MIT License: https://github.com/twbs/icons/blob/main/LICENSE
+					And modified attribute `fill` by Rinrin.rs
+				*/
+				background-image: url('data:image/svg+xml;utf8,<svg class="bi bi-box-arrow-up-right" fill="%23#{$color}" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z" fill-rule="evenodd"/><path d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z" fill-rule="evenodd"/></svg>');
+			}
+
+			&::after {
+				content: '';
+				display: inline-block;
+				$size: 0.85rem;
+				width: $size;
+				height: $size;
+				background-size: contain;
+				margin-right: 0.25rem;
+				margin-left: 0.15rem;
+
+				@include box-arrow-up-right-svg(17d8d8);
+			}
+
+			&:hover::after {
+				@include box-arrow-up-right-svg(7effb4);
+			}
+
+			&:active::after {
+				@include box-arrow-up-right-svg(e6ff9a);
+			}
+		}
+	}
+
 	&:hover {
 		color: #7effb4;
 	}
