♻️ Improve: use `svelte/store` module for Contact Modal

--- a/src/lib/stylesheets/layout.scss
+++ b/src/lib/stylesheets/layout.scss
@@ -3,6 +3,13 @@
 @use '$lib/stylesheets/variables/color' as *;
 @use '$lib/stylesheets/variables/dimension' as *;
 
+.modal-bg {
+	position: fixed;
+	inset: 0;
+	background-color: #000000aa;
+	z-index: 254;
+}
+
 main::before {
 	content: '';
 	$dark: rgba($secondary-color, 0.75);
