--- a/src/lib/stylesheets/teams.scss
+++ b/src/lib/stylesheets/teams.scss
@@ -18,7 +18,7 @@ ul {
 	margin: 6px 4px;
 }
 
-button {
+.div-btn {
 	font-family: inherit;
 	color: inherit;
 	background: none;
@@ -139,6 +139,7 @@ h2 {
 .socials {
 	grid-row: 2 / 3;
 	grid-column: 1 / 3;
+	position: relative;
 	display: flex;
 	height: 52px;
 
@@ -156,6 +157,19 @@ h2 {
 		position: relative;
 		top: 1px;
 	}
+
+	.gear-and-sens {
+		position: absolute;
+		right: 0;
+		bottom: 0;
+	}
+}
+
+.gear-and-sens-btn {
+	padding: 0;
+	background: none;
+	border: none;
+	cursor: pointer;
 }
 
 @include sp {
