--- a/src/lib/stylesheets/variables/_color.scss
+++ b/src/lib/stylesheets/variables/_color.scss
@@ -7,3 +7,5 @@ $primary-color-pale: #98c0e7;
 $primary-color-pale-darker: #375d81;
 $primary-color-pale-lighter: #dff1ff;
 $secondary-color: #111111;
+
+$old-primary-color: #d1ff46;
