📚 Docs: fix typos

--- a/src/lib/stylesheets/variables/_mixin.scss
+++ b/src/lib/stylesheets/variables/_mixin.scss
@@ -1,7 +1,7 @@
 // © 2022 REVATI
 
 $breakpoint: 788px;
-// If update `$bp-hamburger-btn` Sass variable, also update `BREAKPOINT_HB` JS constant in `src/lib/scripts/variables.ts`.
+// If update the `$bp-hamburger-btn` Sass variable, also update the `BREAKPOINT_HB` JS constant in `src/lib/scripts/variables.ts`.
 // ＊ `$bp-hamburger-btn` = (numerical value of `BREAKPOINT_HB`) + 1
 $bp-hamburger-btn: 908px;
 $bp-wide: 1058px;
