🐛 Fix: `::after` of header items no longer have outline around it on focus [#151]

--- a/src/lib/stylesheets/header/header.scss
+++ b/src/lib/stylesheets/header/header.scss
@@ -191,6 +191,10 @@ li {
 			transition: 0.2s;
 		}
 
+		&:focus-visible::after {
+			content: none;
+		}
+
 		&:hover,
 		&.active {
 			&::after {
