--- a/src/lib/stylesheets/variables/_mixin.scss
+++ b/src/lib/stylesheets/variables/_mixin.scss
@@ -4,6 +4,7 @@ $breakpoint: 788px;
 // If update the `$bp-hamburger-btn` Sass variable, also update the `BREAKPOINT_HB` JS constant in `/src/lib/scripts/variables.ts`.
 // ＊ `$bp-hamburger-btn` = (numerical value of `BREAKPOINT_HB`) + 1
 $bp-hamburger-btn: 1042px;
+$bp-low-height: 784px;
 $bp-wide: $bp-hamburger-btn + 150px;
 
 @mixin pc {
@@ -37,7 +38,7 @@ $bp-wide: $bp-hamburger-btn + 150px;
 }
 
 @mixin low-height {
-	@media screen and (max-height: 674px) {
+	@media screen and (max-height: $bp-low-height) {
 		@content;
 	}
 }
