--- a/src/lib/stylesheets/layout.scss
+++ b/src/lib/stylesheets/layout.scss
@@ -15,6 +15,19 @@
 	}
 }
 
+noscript {
+	display: block;
+	position: relative;
+	font-family: initial;
+	font-weight: 900;
+	font-size: 16px;
+	padding: 26px;
+	color: $primary-color-pale-lighter;
+	background-color: $secondary-color;
+	border-bottom: 1px solid $primary-color-pale-lighter;
+	z-index: 2048;
+}
+
 main::before {
 	content: '';
 	$dark: rgba($secondary-color, 0.75);
