♿ A11y: animated elements no longer remain hidden [#166]

--- a/src/lib/stylesheets/reveal_fade_in.scss
+++ b/src/lib/stylesheets/reveal_fade_in.scss
@@ -50,8 +50,10 @@ $last-point: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
 	}
 }
 
-.container {
-	opacity: 0;
+@media (scripting: enabled) {
+	.container {
+		opacity: 0;
+	}
 }
 
 .active .container {
