♻️ Add: `hideWhenNoJs` mixin [#166]

--- a/src/lib/stylesheets/header/header.scss
+++ b/src/lib/stylesheets/header/header.scss
@@ -253,9 +253,7 @@ li {
 .item-contact {
 	margin-right: 2.6em;
 
-	@media (scripting: none) {
-		display: none;
-	}
+	@include hideWhenNoJs;
 }
 
 #header2 {
