--- a/src/lib/stylesheets/home/member_card.scss
+++ b/src/lib/stylesheets/home/member_card.scss
@@ -1,6 +1,7 @@
 // © 2022 REVATI
 
 @use '$lib/stylesheets/variables/color' as *;
+@use '$lib/stylesheets/variables/mixin' as *;
 
 ul {
 	list-style: none;
@@ -128,6 +129,7 @@ h3 {
 		position: absolute;
 		right: 0;
 		bottom: 0;
+		@include hideWhenNoJs;
 	}
 }
 
