♿ A11y: buttons and note paragraphs in COACHING section are no longer displayed when JS is disabled [#166]

--- a/src/lib/stylesheets/home/coaching.scss
+++ b/src/lib/stylesheets/home/coaching.scss
@@ -14,6 +14,10 @@
 	margin-top: 10px !important;
 	font-size: 17px !important;
 	letter-spacing: -0.5px !important;
+
+	&.note {
+		@include hideWhenNoJs;
+	}
 }
 
 .buttons {
@@ -27,6 +31,7 @@
 
 button {
 	margin: 28px 0;
+	@include hideWhenNoJs;
 
 	@include btn(24px);
 }
